# dbcop-verifier

./: .gitignore  Cargo.toml  Makefile  README.md
hist/hist-00000/: history.bincode
histories/: history.bincode
mem-results/: mem-results-raw.csv  mem-results-smc.csv
output/roachdb_general_all_writes/12_30_20_720/hist-00000/: result_log.json
output/roachdb_general_all_writes/12_30_20_720/hist-00001/: result_log.json
output/roachdb_general_all_writes/12_30_20_720/hist-00002/: result_log.json
output/roachdb_general_all_writes/12_30_20_720/hist-00003/: result_log.json
output/roachdb_general_all_writes/12_30_20_720/hist-00004/: result_log.json
output/roachdb_general_all_writes/12_30_20_720/hist-00005/: result_log.json
output/roachdb_general_all_writes/12_30_20_720/hist-00006/: result_log.json
output/roachdb_general_all_writes/12_30_20_720/hist-00007/: result_log.json
output/roachdb_general_all_writes/12_30_20_720/hist-00008/: result_log.json
output/roachdb_general_all_writes/12_30_20_720/hist-00009/: result_log.json
output/roachdb_general_all_writes/12_30_20_720/hist-00010/: result_log.json
output/roachdb_general_all_writes/12_30_20_720/hist-00011/: result_log.json
output/roachdb_general_all_writes/12_30_20_720/hist-00012/: result_log.json
results/: result_log.json
script/: check-ans.py  draw-csv.py  parse-massif.py  test-from-excution.py  verify-all.py
src/: main.rs
src/consistency/: algo.rs  util.rs
src/db/: cluster.rs  history.rs  mod.rs
src/verifier/: mod.rs  util.rs
test-scripts/: test.py
(+12022 files in other folders)
